[fix][css][windows] overflow: scroll では scrollbar が常時表示される

--- a/nuxt_side/assets/sass/css_macro.sass
+++ b/nuxt_side/assets/sass/css_macro.sass
@@ -8,11 +8,11 @@
   word-break: break-all
 
 =is_scroll_x
-  overflow-x: scroll
+  overflow-x: auto
   overscroll-behavior-y: none
 
 =is_scroll_y
-  overflow-y: scroll
+  overflow-y: auto
   overscroll-behavior-y: none
 
 =icon_rorate_if_button_hover($button_class)
